main: Remove calls to gtk_main_iteration()

A good way to break things (like hang with multiple windows opened
when launched a bit too quickly because we didn't say we were done
setting up the first window)

https://bugzilla.gnome.org/show_bug.cgi?id=663501